--- a/style.css
+++ b/style.css
@@ -101,10 +101,10 @@ div.子1 {border:2px solid lime; width: 78%; height: 49%;　background-color: rg
 div.子2 {border:2px solid blue; width: 78%; height: 49%;　background-color: rgba(0, 150, 50, 0); box-sizing: border-box; margin-left: 22%; }  
    div.テキスト {border:2px solid green; width: 45%; height: 25px; background-color: rgba(100, 0, 50, 0.2); position: absolute; margin-top: 15px; z-index: 2; } 
 img.ヘア1 {border:2px solid orange; width: 40%; box-sizing: border-box; margin-top: 5%; z-index: 1;}
-img.ヘア2 {border:2px solid pink; width: 0%; box-sizing: border-box; margin-top: -70%; margin-left: 60%; opacity: 0.5; z-index: -2;}
-img.ヘア3 {border:2px solid green; width: 40%; box-sizing: border-box; margin-top: -70%; margin-left: 60%; }
-img.ヘア4 {border:2px solid aqua; width: 40%; box-sizing: border-box; margin-top: 5%; }    
-img.ヘア5 {border:2px solid red; width: 40%; box-sizing: border-box; margin-top: -70%; margin-left: 60%; }  
+img.ヘア2 {border:2px solid pink; width: 0%; box-sizing: border-box; margin-top: -85%; margin-left: 60%; opacity: 0.5; z-index: -2;}
+img.ヘア3 {border:2px solid green; width: 40%; box-sizing: border-box; margin-top: -85%; margin-left: 60%; }
+img.ヘア4 {border:2px solid aqua; width: 40%; box-sizing: border-box; margin-top: 5%; margin-left: 60%; }    
+img.ヘア5 {border:2px solid red; width: 40%; box-sizing: border-box; margin-top: -40%; }  
    
 div.メニュー1 img {width: 35%; margin-top: 3%; margin-left: 7%; }
 
