--- a/style.css
+++ b/style.css
@@ -165,9 +165,9 @@ div.子2 {border:2px solid blue; width: 73%; height: 98.5%; background-color: rg
   div.テキスト {border:2px solid green; width: 45%; height: 25px; background-color: rgba(100, 0, 50, 0.2); position: absolute; margin-top: 15px; z-index: 2; }  
 img.ヘア1 {border:2px solid orange; width: 32.5%; box-sizing: border-box; margin-top: 5%; z-index: 1; }
 img.ヘア2 {border:2px solid pink; width: 0%; box-sizing: border-box; margin-top: -60%; margin-left: 68%; opacity: 0.5; z-index: -2; }
-img.ヘア3 {border:2px solid green; width: 32.5%; box-sizing: border-box; margin-top: -67%; margin-left: 68%; z-index: 1;}
-img.ヘア4 {border:2px solid aqua; width: 32.5%; box-sizing: border-box; margin-top: -25%; margin-left: 68%; }  
-img.ヘア5 {border:2px solid red; width: 32.5%; box-sizing: border-box; margin-top: -3.5%; }
+img.ヘア3 {border:2px solid green; width: 32.5%; box-sizing: border-box; margin-top: -75%; margin-left: 68%; z-index: 1;}
+img.ヘア4 {border:2px solid aqua; width: 32.5%; box-sizing: border-box; margin-bottom: 10%; margin-left: 68%; }  
+img.ヘア5 {border:2px solid red; width: 32.5%; box-sizing: border-box; margin-top: -65%; }
    
 div.メニュー1 img {width: 15%; margin-top: 5%; margin-left: 10%; }
 
